# ollama-audit

./: .env.example  .gitignore  Cargo.toml  README.md  README_zh.md
src/: config.rs  lib.rs  main.rs
src/logger/: logger_audit.rs  logger_langfuse.rs  logger_llm.rs  logger_ollama.rs  logger_tracing.rs  mod.rs
src/rest/: app_state.rs  get_proxy.rs  mod.rs  post_proxy.rs  server.rs
src/utils/: env_utils.rs  mod.rs
